Completed all exercises

--- a/index.html
+++ b/index.html
@@ -9,84 +9,95 @@
   <body>
     <div id="exercise1">
       <!-- Complete Exercise 1 HERE -->
+      <h1> Sam Shadwell </h1>
+      <p>I am a full stack developer, specialized in C#, .NET framework, SQL, and HTML. 
+        My passion for development began with my career as a Data Analyst, where I worked with large amounts of data and performed frequent technical troubleshooting. 
+        Past projects include Taco Parser which implements CSV parsing to process Taco Bell location data. 
+        I am currently working on a project that is a text-based adventure game as a console app. </p>
     </div>
 
     <div id="exercise2">
       <!-- Complete Exercise 2 HERE -->
+      <ul>
+        <li> <a href ="https://www.linkedin.com/in/samantha-shadwell-040854164/" target = "_blank">LinkedIn Profile</a></li>
+        <li><a href ="https://truecoders.io/" target="_blank">TrueCoders Homepage</a></li>
+        <li><a href="https://mail.google.com/mail/u/0/#inbox" target = "_blank">Most visited website</a></li>
+      </ul>
     </div>
 
     <div id="exercise3">
       <!-- Complete Exercise 3 HERE -->
+      <img src="images/greycat.jpg" alt="a grey cat with yellow eyes sits in front of stone wall" />
     </div>
 
     <div id="exercise4">
       <!-- Complete Exercise 4 HERE -->
       <p>
-        I looked down at the board. "The point isn't to win?" I asked. "The
-        point," Bredon said grandly, "is to play a beautiful game." He lifted
+        I looked down at the board. "The <strong>point</strong> isn't to win?" I asked. "The
+        <strong>point</strong>," <span>Bredon</span> said grandly, "is to <u>play</u> a <em>beautiful</em> game." He lifted
         his hands and shrugged, his face breaking into a beautific smile. "Why
-        would I want to win anything other than a beautiful game?"
+        would I want to win anything other than a <em>beautiful</em> game?"
       </p>
     </div>
 
     <div id="exercise5">
       <!-- Complete Exercise 5 HERE -->
-      <div>
-        <div>
-          <div>
-            <span>
-              <a href="/">Home</a>
-            </span>
-            <span>
-              <a href="/about">About</a>
-            </span>
-            <span>
-              <a href="/projects">Projects</a>
-            </span>
-          </div>
-        </div>
-      </div>
+      <header>
+        <nav>
+          <ul>
+            <li>
+              <a href="https://truecoders.io/" target="_blank">Home</a>
+            </li>
+            <li>
+              <a href="https://truecoders.io/course" target="_blank">Courses</a>
+            </li>
+            <li>
+              <a href="https://truecoders.io/about/faq" target="_blank">FAQ</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-      <div>
-        <div>
+      <main>
+        <section>
           <h1>Main Heading</h1>
           <p>Author.. Bio...</p>
-        </div>
-        <div>
-          <div>
+        </section>
+        <article>
+          <section>
             <h2>Sub Heading</h2>
             <div>
               <p>Lorem ipsum...</p>
             </div>
-          </div>
-          <div>
+          </section>
+          <section>
             <h2>Sub Heading</h2>
             <p>Lorem ipsum...</p>
             <div>
               <h3>Another Sub Heading</h3>
               <p>Lorem ipsum...</p>
             </div>
-          </div>
-        </div>
-	</div>
+          </section>
+        </article>
+      </main>
 
-      <div>
-        <div>
-          <div>
-            <span>
-              <a href="/privacy">Privacy Policy</a>
-            </span>
-            <span>
-              <a href="/terms">Terms and Conditions</a>
-            </span>
-          </div>
-        </div>
+      <footer>
+        <nav>
+          <ul>
+            <li>
+              <a href="https://truecoders.io/privacy" target="_blank">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="https://truecoders.io/terms-of-service" target="_blank">Terms of Service</a>
+            </li>
+          </ul>
+        </nav>
 
         <div>
           <p>Powered by 🕯️</p>
           <p>&copy; TrueCoders 2021-24</p>
         </div>
-      </div>
+      </footer>
     </div>
 	
   </body>
